--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <nav class="tm-navbar uk-navbar uk-navbar-attached">
         <div class="uk-container uk-container-center">
 
-            <a class="uk-navbar-brand uk-hidden-small" href="index.html"><img class="uk-margin uk-margin-remove" src="logo.svg" title="HeyStudent" alt="HeyStudent"></a>
+            <a class="uk-navbar-brand uk-hidden-small" href="index.html">
+                <img class="uk-margin uk-margin-remove" src="logo.svg" title="HeyStudent" alt="HeyStudent">
+            </a>
 
             <ul class="uk-navbar-nav uk-hidden-small">
                 <li><a href="#/schedule">Расписание</a></li>
@@ -27,16 +29,12 @@
 
             <a href="#tm-offcanvas" class="uk-navbar-toggle uk-visible-small" data-uk-offcanvas=""></a>
 
-            <div class="uk-navbar-brand uk-navbar-center uk-visible-small"><img src="docs/images/logo_uikit.svg" width="90" height="30" title="UIkit" alt="UIkit"></div>
+            <div class="uk-navbar-brand uk-navbar-center uk-visible-small"><img src="logo.svg" width="90" height="30" title="HeyStudent" alt="HeyStudent"></div>
 
         </div>
     </nav>
     <div class="tm-middle">
-        <div class="uk-container uk-container-center">
-            <div class="uk-grid" data-uk-grid-margin>
-                <div ng-view></div>
-            </div>
-        </div>
+        <div ng-view></div>
     </div>
 </body>
 </html>
