--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
     <nav class="tm-navbar uk-navbar uk-navbar-attached">
         <div class="uk-container uk-container-center">
 
-            <a class="uk-navbar-brand uk-hidden-small" href="index.html">
-                <img class="uk-margin uk-margin-remove" src="logo.svg" title="HeyStudent" alt="HeyStudent">
-            </a>
+            <a class="tm-navbar-brand uk-navbar-brand uk-hidden-small" href="index.html"></a>
 
             <ul class="uk-navbar-nav uk-hidden-small">
                 <li><a href="#/schedule">Расписание</a></li>
@@ -31,7 +29,9 @@
 
             <a href="#tm-offcanvas" class="uk-navbar-toggle uk-visible-small" data-uk-offcanvas=""></a>
 
-            <div class="uk-navbar-brand uk-navbar-center uk-visible-small"><img src="logo.svg" width="90" height="30" title="HeyStudent" alt="HeyStudent"></div>
+            <div class="uk-navbar-brand uk-navbar-center uk-visible-small">
+                <div class="tm-navbar-brand-off"></div>
+            </div>
 
         </div>
     </nav>
