--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 <body>
     <nav class="tm-navbar uk-navbar uk-navbar-attached">
         <div class="uk-container uk-container-center">
-
             <a class="tm-navbar-brand uk-navbar-brand uk-hidden-small" href="index.html"></a>
 
-            <ul class="uk-navbar-nav uk-hidden-small">
+            <ul class="tm-navbar-nav uk-navbar-nav uk-hidden-small">
                 <li><a href="#/schedule">Расписание</a></li>
                 <li><a href="#/teachers">Преподаватели</a></li>
             </ul>
@@ -32,7 +31,6 @@
             <div class="uk-navbar-brand uk-navbar-center uk-visible-small">
                 <div class="tm-navbar-brand-off"></div>
             </div>
-
         </div>
     </nav>
     <div class="tm-middle">
